# final

./: README.md  libraries.md
backend/: .gitignore  HELPME.md  README.md  app.py  main.py
backend/api/: .gitignore  Dockerfile  pyproject.toml  run.sh
backend/api/app/: __init__.py
backend/api/app/models/: tables.py
backend/api/app/views/: routes.py
frontend/chessboard/: package-lock.json  package.json
frontend/chessboard/components/: ApiContext.tsx  Calendar.tsx  Chessboard.tsx  Lock.tsx  Overlay.tsx  UserIndicator.tsx
frontend/phone/app/: index.js
frontend/phone/app/(hamburger)/: calendar.tsx  create_event.tsx  create_event_android.js
