[tool.poetry]
name = "knightAPI"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Flask-SQLAlchemy = "^3.1.1"
Flask = "^3.0.3"
icalendar = "^5.0.13"
flask-cors = "^5.0.0"
ics = "^0.7.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
